--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,10 @@
 [db]
-db.daws78s.online
-
+db.srikantheswar.online
 [backend]
-backend.daws78s.online
+backend.srikantheswar.online
 
 [frontend]
-daws78s.online
+srikantheswar.online
 
 [all:vars]
 ansible_password=DevOps321
