--- a/roles/common/tasks/app-pre-req.yaml
+++ b/roles/common/tasks/app-pre-req.yaml
@@ -1,8 +1,9 @@
+
 - name: delete app directory
   ansible.builtin.file:
     path: "{{ app_location }}"
     state: absent
-  ignore_errors: yes
+  #ignore_errors: yes
 
 - name: create app directory
   ansible.builtin.file:
