--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -17,11 +17,15 @@
     name: expense
 
 - name: run app pre-requisites
+  tags:
+  - deployment
   ansible.builtin.import_role:
     name: common
     tasks_from: app-pre-req
 
 - name: install npm dependencies
+  tags:
+  - deployment
   ansible.builtin.command: npm install
   args:
     chdir: /app
@@ -30,6 +34,9 @@
   ansible.builtin.template:
     src: backend.service.j2
     dest: /etc/systemd/system/backend.service
+  notify:
+  - daemon reload
+  
 
 - name: install python mysql dependencies
   ansible.builtin.pip: 
@@ -47,11 +54,9 @@
     state: import
     name: all
 
-- name: daemon reload
-  ansible.builtin.systemd_service:
-    daemon_reload: true
-
 - name: start and enable backend service
+  tags:
+  - deployment
   ansible.builtin.service:
     name: backend
     state: restarted
