--- a/aws-ec2.yaml
+++ b/aws-ec2.yaml
@@ -1,6 +1,6 @@
 plugin: amazon.aws.aws_ec2
 regions:
-  - us-east-1
+- us-east-1
 keyed_groups:
 - key: tags['Name']
   prefix: ''
@@ -10,4 +10,5 @@ filters:
   tag:Name: "Backend"
 
 compose:
- # this sets the ansible_host variable to connect with the private ip ddress without changing the name
+  # this sets the ansible_host variable to connect with the private ip ddress without changing the name
+  ansible_host: private_ip_address
