--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -7,7 +7,7 @@ keyed_groups:
   parent_group: ''
 
 filters:
-  tag:Name: "Backend"
+  tag:Name: "Backend*"
 
 compose:
   ansible_host: private_ip_address
