--- a/expense_aws.yaml
+++ b/expense_aws.yaml
@@ -1,3 +1,4 @@
+---
 - name: Create EC2 instances and Update Route 53 Hosted Zones
   hosts: localhost
   tasks:
@@ -18,3 +19,15 @@
     - name: Print the output of ec2_info
       ansible.builtin.debug:
         msg: "Output of ec2info {{ ec2_info }}"
+
+    - name: Update Route 53 Hosted Zone for DB server
+      route53:
+        command: change
+        zone: "srikantheswar.online"
+        record: 
+          name: "db"
+          type: A
+          ttl: 300
+          value: "{{ ec2_info.results[0].instances[0].public_ip }}"
+        state: present
+        
