--- a/expensew_aws.yaml
+++ b/expensew_aws.yaml
@@ -25,7 +25,7 @@
         command: change
         zone: "srikantheswar.online"
         record: 
-          name: "db"
+          name: "db.srikantheswar.online"
           type: A
           ttl: 300
           value: "54.242.155.193"
