--- a/expensew_aws.yaml
+++ b/expensew_aws.yaml
@@ -25,7 +25,7 @@
         command: change
         zone: "srikantheswar.online"
         record: 
-          name: "db.srikantheswar.online"
-          type: A
-          ttl: 1
-          value: "172.31.23.158"
+          Record name: "db.srikantheswar.online"
+          Type: A
+          TTL: 1
+          Value: "172.31.23.158"
