--- a/expensew_aws.yaml
+++ b/expensew_aws.yaml
@@ -22,10 +22,10 @@
 
     - name: Update Route 53 Hosted Zone for DB server
       route53:
-        state: present  # Specify the state as "present" to ensure the record exists
+        state: present
         zone: "srikantheswar.online"
         record: 
           name: "db.srikantheswar.online"
-          type: A
           ttl: 1   # Set TTL to 1 second if required
           value: "172.31.23.158"
+        type: A
