--- a/expensew_aws.yaml
+++ b/expensew_aws.yaml
@@ -26,6 +26,6 @@
         zone: "srikantheswar.online"
         record: 
           name: "db.srikantheswar.online"
-          ttl: 1   # Set TTL to 1 second if require
-        type: A
-        value: "172.31.23.158"
+          ttl: 1   # Set TTL to 1 second if required
+          type: A
+          value: "172.31.23.158"
