--- a/expensew_aws.yaml
+++ b/expensew_aws.yaml
@@ -27,5 +27,5 @@
         record: 
           name: "db.srikantheswar.online"
           ttl: 1   # Set TTL to 1 second if required
-          type: A
+          Type: A
           value: "172.31.23.158"
